--- a/slack-mcp-server-api/.gitignore
+++ b/slack-mcp-server-api/.gitignore
@@ -128,6 +128,10 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
+# Generated OpenAPI files
+openapi.json
+openapi.yaml
+
 # IDE files
 .vscode/
 .idea/
