--- a/slack-mcp-server-api/.env.example
+++ b/slack-mcp-server-api/.env.example
@@ -3,4 +3,4 @@ SLACK_USER_TOKEN=xoxp-your-slack-user-token-here
 GRAM_AI_API_KEY=your-gram-ai-api-key-here
 OPENAI_API_KEY=sk-proj-your-openai-api-key-here
 
-POSTIZ_MCP_URL=
+POSTIZ_MCP_URL=your-postiz-mcp-url
